RESOLVED FIXED79998
Handle CSSPropertyWebkitBorderFit in CSSStyleApplyProperty.
https://bugs.webkit.org/show_bug.cgi?id=79998
Summary Handle CSSPropertyWebkitBorderFit in CSSStyleApplyProperty.
Luke Macpherson
Reported 2012-02-29 19:07:24 PST
Handle CSSPropertyWebkitBorderFit in CSSStyleApplyProperty.
Attachments
Patch (3.44 KB, patch)
2012-02-29 19:11 PST, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-02-29 19:11:17 PST
WebKit Review Bot
Comment 2 2012-03-01 02:37:43 PST
Comment on attachment 129613 [details] Patch Rejecting attachment 129613 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: -merging Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 [Qt][WK2] Unreviewed buildfix after r109277. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/11769353
WebKit Review Bot
Comment 3 2012-03-01 19:19:00 PST
Comment on attachment 129613 [details] Patch Clearing flags on attachment: 129613 Committed r109488: <http://trac.webkit.org/changeset/109488>
WebKit Review Bot
Comment 4 2012-03-01 19:19:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.